Main contebt: fix overflow on left side tiles

--- a/src/input.css
+++ b/src/input.css
@@ -10,9 +10,10 @@
 	@apply grayscale opacity-30 group-hover:opacity-100 group-hover:grayscale-0
 }
 
-.overflow-left{
-	/* direction: rtl; */
-	/* text-align:right;
-	overflow:hidden;
-	white-space: nowrap; */
+.rtl{
+	direction: rtl;
+}
+
+.ltr{
+	direction: ltr;
 }
